Make fonts responsive and clean up form margins

--- a/src/app/styles_css/form.module.css
+++ b/src/app/styles_css/form.module.css
@@ -6,8 +6,8 @@
     gap: 10px;
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
     align-items: center;
   }
   
@@ -15,48 +15,27 @@
   .textarea {
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
     font-size: 16px;
     border-radius: 17px;
-    width: 33vw;
-    min-width: 33vw;
+    width: 75vw;
   }
  
-  @media (max-width: 1200px) {
-    .input,
-    .textarea {
-      width: 33vw;
-      min-width: 33vw;
-    }
-  }
 
-  @media (max-width: 1024px) {
+
+  @media (min-width: 768px) {
     .input,
     .textarea {
-      width: 43vw;
-      min-width: 43vw;
+      width: 48vw;
       
     }
   }
 
-  @media (max-width:768px) {
+  @media (min-width:1024px) {
     .input,
     .textarea {
-      width: 55vw;
-    }
-  }
-
-  @media (max-width:576px) {
-    .input,
-    .textarea {
-      width: 60vw;
-    }
-  }
-
-  @media (max-width:480px) {
-    .input,
-    .textarea {
-      width: 70vw;
+      width: 350px;
+      margin-left: 25px;
+      margin-right: 25px;
     }
   }
 
