--- a/src/app/styles_css/contactPage.module.css
+++ b/src/app/styles_css/contactPage.module.css
@@ -14,12 +14,12 @@ background-color: rgb(255, 255, 255) !important;
 }
 
 .paragraph {
-    font-size: 16px;
+  font-size: clamp(12px, 3vw, 16px);
     
   }
   
   .h1 {
-    font-size: 32px;
+    font-size: clamp(24px, 6vw, 32px);
     font-weight: 500;
     line-height: 1.4;
     background: linear-gradient(
@@ -34,7 +34,9 @@ background-color: rgb(255, 255, 255) !important;
 
   
   .lastParagraph {
-    font-size: 16px;
+    font-size: clamp(12px, 3vw, 16px);
+
   }
+
 
   
