--- a/src/app/styles_css/navigationbar.module.css
+++ b/src/app/styles_css/navigationbar.module.css
@@ -62,24 +62,29 @@
 
 /* Responsive styles */
 @media (max-width: 768px) {
-  .nav-links {
-    flex-direction: row;
-    background-color: #ffffff;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    width: 100%;
+  .nav-links,
+  .button {
     display: none;
-    border-radius: 0 0 12px 12px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    
   }
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    border-radius: 14px;
+    padding: 1.1rem 0rem;
+    width: 190px;
+    left:50%;
+    transform: translateX(-50%);
+  }
+  .logo {
+    position: static;
+  }
+}
 
   .navbar.expanded .nav-links {
     display: flex;
   }
-
-
-}
 
 .button {
   padding: 21px;
@@ -95,10 +100,4 @@
   background-color: transparent !important;
   position: absolute;
   right: 15px;
-}
-
-@media (max-width: 768px) {
-  .navbar {
-    display: none;
-  }
 }
