--- a/src/app/styles_css/navigationbar.module.css
+++ b/src/app/styles_css/navigationbar.module.css
@@ -22,9 +22,10 @@
   text-decoration: none; /* Remove underline from the link */
   font-size: 1rem;
   font-weight:450; /* Light font weight */
-
   position: absolute;
   left: 25px;
+
+
   
   /* Apply the gradient to the text */
   background: linear-gradient(
@@ -76,14 +77,20 @@
     width: 190px;
     left:50%;
     transform: translateX(-50%);
-    box-shadow: 0 0px 1px rgba(0, 0, 0, 0.2);
-
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: none;
   }
   .logo {
     position: static;
   }
   .logo {
     color: #4a4a4a;
+  }
+}
+
+@media (min-width: 768px) {
+  .menuIcon {
+    display: none;
   }
 }
 
@@ -105,4 +112,17 @@
   background-color: transparent !important;
   position: absolute;
   right: 15px;
+}
+
+.menuIcon {
+  height: 20px;
+  position: relative;
+  color: #e00000;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  align-items: center;
 }
