--- a/src/app/styles_css/contactPage.module.css
+++ b/src/app/styles_css/contactPage.module.css
@@ -38,5 +38,10 @@ background-color: rgb(255, 255, 255) !important;
 
   }
 
+  @media (max-width: 768px){
+    .mainContainer {
+      margin-top: 140px;
+    }
+  }
 
   
