--- a/src/app/styles_css/menuCard.module.css
+++ b/src/app/styles_css/menuCard.module.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: row;
     background-color: rgb(255, 255, 255);
-    width: 320px;
+    width: 75vw;
     border-width: 2px;
-    height: 85px;
+    height: 65px;
     border-radius: 20px;
     border-color: #525252;
     align-items: center;
