--- a/src/app/styles_css/menuPage.module.css
+++ b/src/app/styles_css/menuPage.module.css
@@ -4,16 +4,14 @@
     gap: 20px;
     align-items: center;
     position: fixed;
-    top: 30vh;
+    top: 25vh;
     width: 100%;
 }
 
 .image {
     width: 90vw;
     position: fixed;
-    top:0%;
-    
-}
+    top: calc(-1 * (100vw - 320px) * 0.35);}
 
 .logoContainer {
     display:flex;
