--- a/src/app/styles_css/menuPage.module.css
+++ b/src/app/styles_css/menuPage.module.css
@@ -9,10 +9,11 @@
 }
 
 .cencelIcon {
-    width: 50px;
+    width: 45px;
     border-width: 1px;
-    padding: 15px;
-    border-radius: 15px;
+    border-color: #4a4a4a;
+    padding: 16px;
+    border-radius: 13px;
     position:fixed;
     top: 40px;
     z-index: 1000;
@@ -38,6 +39,7 @@
     display:flex;
     flex-direction:row;
     gap:15px;
+
 }
 
 .logo {
