Mobile Menu Cancel Box

--- a/src/app/styles_css/navigationbar.module.css
+++ b/src/app/styles_css/navigationbar.module.css
@@ -18,7 +18,7 @@
   top: 1.3rem;
   width: 210px;
   padding: 1.1rem 0rem;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #0000001a;
   border-radius: 14px;
   background-color: #ffffff;
   box-shadow: none;
