--- a/src/app/styles_css/menuPage.module.css
+++ b/src/app/styles_css/menuPage.module.css
@@ -8,17 +8,42 @@
     z-index: 1000;
 }
 
+
+.closeWrapper {
+    justify-content: center;
+    width:100% ;
+    display: flex;
+
+}
+
+.closeBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 1.3rem;
+    width: 140px;
+    padding: 0.5rem 0rem;
+    border: 1px solid #0000001a;
+    border-radius: 14px;
+    background-color: #ffffff;
+    box-shadow: none;
+    z-index: 1000;
+    gap: 1rem;
+}
+
 .cencelIcon {
     width: 45px;
     border-width: 1px;
-    border-color: #4a4a4a;
+    border-color: #0000001a;
     padding: 16px;
     border-radius: 13px;
-    position:fixed;
     top: 40px;
     z-index: 1000;
     background-color: white;
 }
+
+
 
 .buttons {
     display: flex;
