--- a/src/app/styles_css/auSection1.module.css
+++ b/src/app/styles_css/auSection1.module.css
@@ -12,18 +12,18 @@
 .box {
     display: flex;
     flex-direction: row;
-    padding: 50px;
+    padding: 3vw;
     justify-content: space-between;
     background-color: #F5F5F5;
     align-items: center;
     border-radius: 35px;
-    width: 900px;
+    width: 70vw;
 
 
 }
 
 .imageOne {
-    width: 450px;
+    width: 40vw;
 }
 
 .text {
