--- a/src/app/styles_css/auSection2.module.css
+++ b/src/app/styles_css/auSection2.module.css
@@ -17,8 +17,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 35px;
-    width: 900px;
-    height: 600px;
+    width: 70vw;
+    height: 100vh;
   }
   
   .text {
