--- a/src/app/styles_css/auImageCard.module.css
+++ b/src/app/styles_css/auImageCard.module.css
@@ -1,23 +1,23 @@
 .card {
     display: flex;
-    gap: 15px;
+    gap: clamp(0.5rem, 1.5vw, 1.25rem);
     flex-direction: column;
 }
 
 .image {
-    width: 230px;
+    width: clamp(10rem, 18vw, 62rem);
 }
 
 .text {
-    margin-left: 12px;
+    margin-left: clamp(0.5rem, 1.5vw, 1.8rem);
 
 }
 .name {
-    font-size: 20px;
+    font-size: clamp(1rem, 1.8vw, 4.5rem);
     font-weight: 700;
 
 }
 
 .position {
-    font-size: 9px;
+    font-size: clamp(0.3rem, 0.9vw, 2rem);
 }
