--- a/src/app/styles_css/auSection1.module.css
+++ b/src/app/styles_css/auSection1.module.css
@@ -12,22 +12,22 @@
 .box {
     display: flex;
     flex-direction: row;
-    padding: 3vw;
+    padding: clamp(2rem, 5vw, 14rem) clamp(2rem, 7vw, 14rem);
     justify-content: space-between;
     background-color: #F5F5F5;
     align-items: center;
-    border-radius: 35px;
+    border-radius: 3vw;
     width: 70vw;
 
 
 }
 
 .imageOne {
-    width: 40vw;
+    width: 30vw;
 }
 
 .text {
-    font-size: 22px;
+    font-size: clamp(1rem, 1.6vw, 4.5rem);
     
 
 }
