--- a/src/app/styles_css/navigationbar.module.css
+++ b/src/app/styles_css/navigationbar.module.css
@@ -99,7 +99,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 1.2rem 2rem;
+    padding: clamp(1.2rem, 1.2vw, 2.5rem) clamp(1.5rem, 4vw, 3rem);
     width: 95%;
     border-radius: 16px;
     background-color: #ffffff;
