--- a/src/app/styles_css/auSection1.module.css
+++ b/src/app/styles_css/auSection1.module.css
@@ -1,33 +1,60 @@
 .wrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     justify-content: center;
     align-items: center;
     margin-top: 150px;
-
-
 }
 
 .box {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: clamp(2rem, 5vw, 14rem) clamp(2rem, 7vw, 14rem);
-    justify-content: space-between;
     background-color: #F5F5F5;
+    justify-content: center;
+    gap: 40px;
     align-items: center;
     border-radius: 3vw;
-    width: 70vw;
-
-
+    width: 80vw;
 }
 
 .imageOne {
-    width: 30vw;
+    width: 70vw;
 }
 
 .text {
-    font-size: clamp(1rem, 1.6vw, 4.5rem);
-    
+    font-size: clamp(15px, 3vw, 26px);
+}
 
+
+
+@media (min-width: 768px) {
+    .wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-top: 150px;
+    }
+
+    .box {
+        display: flex;
+        flex-direction: row;
+        padding: clamp(2rem, 5vw, 14rem) clamp(2rem, 7vw, 14rem);
+        justify-content: space-between;
+        background-color: #F5F5F5;
+        align-items: center;
+        border-radius: 3vw;
+        width: 70vw;
+    }
+
+    .imageOne {
+        width: 30vw;
+    }
+
+    .text {
+        font-size: clamp(1rem, 1.6vw, 4.5rem);
+    }
 }
