--- a/src/app/styles_css/auSection2.module.css
+++ b/src/app/styles_css/auSection2.module.css
@@ -23,11 +23,13 @@
 }
 
 .text {
-  font-size: clamp(9.5px, 2.5vw, 22px);
+  font-size: min(2.5vw, 22px);
   line-height: 1.8;
   color: #ffffff;
   text-align: center;
 }
+
+
 
 .imageTwo {
   width: 100%;
