--- a/src/app/styles_css/auPage.module.css
+++ b/src/app/styles_css/auPage.module.css
@@ -29,15 +29,29 @@
 }
 
 .team {
-    display: flex;
-    flex-direction: row;
-    width: 85vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 2rem;
     margin-top: clamp(4rem, 6vw, 10rem);
-    margin-bottom: 80px;
-    align-items: center;
-    justify-content: space-between;
 
-}
+  }
+  
+  .team > :nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  
+  .team > :nth-child(2) {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  
+  .team > :nth-child(3) {
+    grid-column: 1;
+    grid-row: 2;
+  }
+  
 
 @media (min-width: 768px) {
     .team {
