--- a/src/app/styles_css/auPage.module.css
+++ b/src/app/styles_css/auPage.module.css
@@ -1,5 +1,5 @@
 .Section3 {
-  margin-top: clamp(6vw, 8vw, 12vw);
+  margin-top: clamp(6vw, 14vw, 19vw);
     justify-items: center;
 }
 
@@ -65,4 +65,11 @@
     
     }
 
+}
+
+@media (min-width: 768px) {
+  .Section3 {
+    margin-top: clamp(6vw, 10vw, 12vw);
+    justify-items: center;
+  }
 }
