--- a/src/app/styles_css/auSection1.module.css
+++ b/src/app/styles_css/auSection1.module.css
@@ -32,12 +32,11 @@
 
 .button {
     background-color: rgb(5, 116, 144);
-    border-radius: 30px;
+    border-radius: 60px;
     width: 50%;
-    padding: 0.8rem;
+    padding: clamp(0.8rem, 3vw, 1.2rem);
     font-weight: 550;
-    font-size:small;
-}
+    font-size: clamp(0.9rem, 2.5vw, 1rem);}
 
 .textButton{
     display: flex;
