--- a/src/app/styles_css/auSection1.module.css
+++ b/src/app/styles_css/auSection1.module.css
@@ -31,7 +31,7 @@
 }
 
 .button {
-    background-color: rgb(21, 118, 202);
+    background-color:#0071E3;
     border-radius: 60px;
     width: 50%;
     padding: clamp(0.8rem, 3vw, 1.2rem);
@@ -81,7 +81,8 @@
     }
 
     .button {
-        background-color: rgb(21, 118, 202);
+        background-color:#0071E3;
+        
         border-radius: 4.9rem;
         width: 70%;
         font-weight: 600;
