--- a/src/app/styles_css/navigationbar.module.css
+++ b/src/app/styles_css/navigationbar.module.css
@@ -51,23 +51,10 @@
 }
 
 .nav-links li a:hover {
-  color: #ff00b3;
+  color:#0071E3;
 }
 
-.button {
-  display: none;
-  padding: 21px;
-  font-size: 12px;
-  cursor: pointer;
-  width: 120px;
-  background: url('/final button.png') no-repeat center/cover;
-  image-rendering: crisp-edges;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  border-radius: 1px;
-  background-color: transparent !important;
-  position: absolute;
-  right: 15px;
-}
+
 
 .menuIcon {
   position: relative;
@@ -86,6 +73,10 @@
   justify-content: center;
   gap: 12px;
   align-items: center;
+}
+
+.button {
+  display: none;
 }
 
 /* When navbar is expanded (e.g., after menu toggle) */
@@ -108,8 +99,10 @@
   .logo {
     position: absolute;
     left: 25px;
+    color: #4a4a4a;
 
-    /* Gradient text effect */
+
+    /* Gradient text effect 
     background: linear-gradient(
       45deg,
       rgba(250, 0, 0, 1) 0%,
@@ -118,7 +111,7 @@
     );
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
+    color: transparent;*/
   }
 
   .nav-links {
@@ -128,6 +121,16 @@
 
   .button {
     display: flex;
+    justify-content: center;
+
+    color: #ffffff;
+    font-size: 12px;
+    cursor: pointer;
+    width: 120px;
+    border-radius: 2rem;
+    background-color:#0071E3;
+    position: absolute;
+    right: 15px;
   }
 
   .menuIcon {
