--- a/src/app/styles_css/auPage.module.css
+++ b/src/app/styles_css/auPage.module.css
@@ -12,13 +12,13 @@
 }
 
 .heading1 {
-    font-size: clamp(26px, 3.1vw, 43rem);
+    font-size: clamp(26px, 6.1vw, 43rem);
     font-weight: 550;
 
 }
 
 .heading2 {
-    font-size: clamp(28px, 3.3vw, 43rem);
+    font-size: clamp(28px, 6.5vw, 43rem);
     font-weight: 550;
     background: linear-gradient(
   90deg,
@@ -35,7 +35,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: auto;
     gap: 2rem;
-    margin-top: clamp(4rem, 6vw, 10rem);
+    margin-top: clamp(4rem, 12vw, 10rem);
 
   }
   
@@ -60,7 +60,7 @@
         display: flex;
         flex-direction: row;
         width: 70vw;
-        margin-top: clamp(4rem, 6.4vw, 10rem);
+        margin-top: clamp(4rem, 6.8vw, 12rem);
         margin-bottom: 80px;
         justify-content: space-between;
         align-items: center;
@@ -73,5 +73,14 @@
   .Section3 {
     margin-top: clamp(6vw, 8vw, 12vw);
     justify-items: center;
+  }
+
+  .heading1 {
+    font-size: clamp(28px, 3.3vw, 43rem);
+
+  }
+
+  .heading2 {
+    font-size: clamp(28px, 3.5vw, 43rem);
   }
 }
