--- a/src/app/styles_css/auSection1.module.css
+++ b/src/app/styles_css/auSection1.module.css
@@ -76,17 +76,19 @@
         font-size: clamp(0.8rem, 1.6vw, 3.5rem);
         text-align: left;
         width: 100%;
+        font-weight: 500;
+        
+
 
 
     }
 
     .button {
         background-color:#0071E3;
-        
         border-radius: 4.9rem;
-        width: 70%;
+        width: 50%;
         font-weight: 600;
-        padding: clamp(0.6rem, 1.1vw, 1.8rem);
+        padding: clamp(0.6rem, 0.8vw, 1.8rem);
         font-size: clamp(0.4rem, 1vw, 2vw);
 
 
