Service page non responsive

--- a/src/app/styles_css/secondServiceCard.module.css
+++ b/src/app/styles_css/secondServiceCard.module.css
@@ -39,8 +39,8 @@
         display: inline-block;
         background: linear-gradient(
          95deg,
-         #0464c4 0%,   /* purple */
-         #00c6ff 100%  /* sky blue */
+         #017d26 0%,   /* purple */
+         #00f141 100%  /* sky blue */
         );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -102,8 +102,8 @@
     font-weight: 700;
     background: linear-gradient(
          95deg,
-         #024b93 0%,   /* purple */
-         #00a3d1 100%  /* sky blue */
+         #026a21 0%,   /* purple */
+         #01dc3b 100%  /* sky blue */
         );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
