--- a/src/app/styles_css/secondServiceCard.module.css
+++ b/src/app/styles_css/secondServiceCard.module.css
@@ -1,117 +1,126 @@
+.wrapper {
+    justify-content: center;
+    display: flex;
+}
 
-@media (min-width: 768px) {
-    .wrapper {
-        justify-content: center;
-        display: flex;
-    }
+.card {
+    display: flex;
+    flex-direction: column;
+    background-color: #f7f7f7;
+    width: 85vw;
+    padding: clamp(3rem, 14vw, 14rem) clamp(2rem, 10vw, 14rem);
+    border-radius: 6vw;
+    gap: 6vw;
+    align-items: center;
 
-    .card {
-        display: flex;
-        flex-direction: column;
-        background-color: #f7f7f7;
-        width: 70vw;
-        padding: clamp(1rem, 7vw, 14rem) clamp(4rem, 7vw, 14rem);
-        border-radius: 3vw;
-        gap: 5vw;
-        align-items: center;
+}
 
-    }
+.textBox {
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    gap: 8vw;
 
-    .textBox {
-        display: flex;
-        flex-direction: column;
-        height: fit-content;
-        gap: 1.8vw;
-
-    }
+}
 
 
-    .image {
-        width: 100vw;
-        margin-top: 2vw;
-        border-radius: 3vw;
-        border-color: #009c2f;
-        border-width: 1px;
-    }
-
-    .title {
-            font-size: clamp(30px, 3.3vw, 43rem);
-            font-weight: 550;
-            line-height: 1.3;        /* Add this */
-            padding: 0;            /* Ensure no padding */
-            margin: 0;             /* Remove top/bottom margin */
-            display: inline-block;
-            background: linear-gradient(
-            95deg,
-            #017d26 0%,   /* purple */
-            #00f141 100%  /* sky blue */
-            );
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-
-            
-    }
-
-    .paragraph  {
-        font-size: clamp(0.8rem, 1.4vw, 3.5rem);
-        color: #5f5f5f;
-        font-weight: 500;
-        width: 85%;
-
-        
-    }
-
-    .button {
-            background-color:#0071E3;
-            border-radius: 4.9rem;
-            width: 40%;
-            font-weight: 600;
-            padding: clamp(0.6rem, 0.8vw, 1.8rem);
-            font-size: clamp(0.4rem, 1vw, 2vw);
-            display: none;
+.image {
+    width: 100vw;
+    margin-top: 2vw;
+    border-radius: 3vw;
+    border-color: #036fb8;
+    border-width: 1px;
 
 
+}
 
-    }
+.imageMobile {
+    width: 100%;
+    border-radius: 3vw;
 
-    .iconWrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100%;
-        
-    }
+}
 
-    .icon {
-        width: 3vw;
-    }
-
-
-    .iconCard {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        width: 30%;
-    }
-
-    .iconText {
-        display: flex;
-        flex-direction: column;
-        gap: 0.8vw;
-    }
-
-    .iconHeadingOne,
-    .iconHeadingTwo,
-    .iconHeadingThree {
-        font-weight: 700;
+.title {
+        font-size: clamp(24px, 8vw, 43px);
+        font-weight: 650;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        display: inline-block;
         background: linear-gradient(
-            95deg,
-            #026a21 0%,   /* purple */
-            #01dc3b 100%  /* sky blue */
-            );
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        font-size: clamp(0.7rem, 1.2vw, 3.5rem);
+         95deg,
+         #0464c4 0%,   /* purple */
+         #00c6ff 100%  /* sky blue */
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+          
+}
+
+.paragraph  {
+    font-size: clamp(0.8rem, 3.6vw, 3.5rem);
+    color: #484747;
+    font-weight: 650;
+
+    width: 100%;
+
+    
+}
+
+.button {
+        background-color:#0071E3;
+        border-radius: 4.9rem;
+        width: 40%;
+        font-weight: 600;
+        padding: clamp(0.6rem, 0.8vw, 1.8rem);
+        font-size: clamp(0.4rem, 1vw, 2vw);
+        display: none;
+
+
+
+}
+
+.iconWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    gap: 8vw;
+    margin-top: 4vw;
+    
+}
+
+.icon {
+    width: 8vw;
+}
+
+
+.iconCard {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 2vw;
+}
+
+.iconText {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8vw;
+}
+
+.iconHeadingOne,
+.iconHeadingTwo,
+.iconHeadingThree {
+    font-weight: 700;
+    background: linear-gradient(
+         95deg,
+         #024b93 0%,   /* purple */
+         #00a3d1 100%  /* sky blue */
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    font-size: clamp(18px, 5vw, 29px);
 
 }
 
@@ -121,19 +130,18 @@
 .iconParaOne,
 .iconParaTwo,
 .iconParaThree {
-    color: #5f5f5f;
-    font-weight: 550;
-    font-size: clamp(0.7rem, 1.2vw, 3.5rem);
+    color: #484747;
+    font-weight: 650;
+    font-size: clamp(0.8rem, 3.4vw, 3.5rem);
 
 }
 
 
-    }
-
+@media (min-width: 768px) {
 
     .wrapper {
-        justify-content: center;
-        display: flex;
+    justify-content: center;
+    display: flex;
     }
 
     .card {
@@ -161,8 +169,15 @@
         width: 100vw;
         margin-top: 2vw;
         border-radius: 3vw;
-        border-color: #009c2f;
+        border-color: #036fb8;
         border-width: 1px;
+        display: flex;
+
+
+    }
+
+    .imageMobile {
+        display: none;
     }
 
     .title {
@@ -174,8 +189,8 @@
             display: inline-block;
             background: linear-gradient(
             95deg,
-            #017d26 0%,   /* purple */
-            #00f141 100%  /* sky blue */
+            #0464c4 0%,   /* purple */
+            #00c6ff 100%  /* sky blue */
             );
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -210,11 +225,14 @@
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
+        margin-top: 0vw;
+
         
     }
 
     .icon {
         width: 3vw;
+        display: flex;
     }
 
 
@@ -237,12 +255,12 @@
         font-weight: 700;
         background: linear-gradient(
             95deg,
-            #026a21 0%,   /* purple */
-            #01dc3b 100%  /* sky blue */
+            #024b93 0%,   /* purple */
+            #00a3d1 100%  /* sky blue */
             );
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-        font-size: clamp(0.7rem, 1.2vw, 3.5rem);
+            font-size: clamp(0.7rem, 1.2vw, 3.5rem);
 
     }
 
@@ -257,12 +275,4 @@
         font-size: clamp(0.7rem, 1.2vw, 3.5rem);
 
     }
-
-
-
-
-
-
-
-
-
+}
