--- a/src/app/styles_css/secondServiceCard.module.css
+++ b/src/app/styles_css/secondServiceCard.module.css
@@ -10,8 +10,9 @@
     width: 85vw;
     padding: clamp(3rem, 14vw, 14rem) clamp(2rem, 8vw, 14rem);
     border-radius: 6vw;
-    gap: 6vw;
     align-items: center;
+    gap: 6vw;
+
 
 }
 
@@ -28,7 +29,6 @@
     width: 100vw;
     margin-top: 2vw;
     border-radius: 3vw;
-    border-color: #036fb8;
     border-width: 1px;
     display: none;
 
@@ -38,7 +38,6 @@
 .imageMobile {
     width: 100%;
     border-radius: 3vw;
-    display: flex;
 
 }
 
@@ -51,8 +50,8 @@
         display: inline-block;
         background: linear-gradient(
          95deg,
-         #009735 0%,   /* purple */
-         #03ff4a 100%  /* sky blue */
+         #00875a 0%,   /* purple */
+         #00de60 100%  /* sky blue */
         );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -88,8 +87,8 @@
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    gap: 8vw;
-    margin-top: 4vw;
+    gap: 10vw;
+    margin-top: 8vw;
     
 }
 
@@ -102,13 +101,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 2vw;
+    gap: 3vw;
 }
 
 .iconText {
     display: flex;
     flex-direction: column;
-    gap: 0.8vw;
+    gap: 2vw;
 }
 
 .iconHeadingOne,
@@ -117,8 +116,8 @@
     font-weight: 700;
     background: linear-gradient(
          95deg,
-         #009735 0%,   /* purple */
-         #03ff4a 100%  /* sky blue */
+         #00875a 0%,   /* purple */
+         #00de60 100%  /* sky blue */
         );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -153,7 +152,7 @@
         width: 70vw;
         padding: clamp(1rem, 7vw, 14rem) clamp(4rem, 7vw, 14rem);
         border-radius: 3vw;
-        gap: 5vw;
+        gap: 3vw;
         align-items: center;
 
     }
@@ -171,7 +170,6 @@
         width: 100vw;
         margin-top: 2vw;
         border-radius: 3vw;
-        border-color: #036fb8;
         border-width: 1px;
         display: flex;
 
@@ -184,15 +182,15 @@
 
     .title {
             font-size: clamp(30px, 3.3vw, 43rem);
-            font-weight: 550;
+            font-weight: 650;
             line-height: 1.3;        /* Add this */
             padding: 0;            /* Ensure no padding */
             margin: 0;             /* Remove top/bottom margin */
             display: inline-block;
             background: linear-gradient(
             95deg,
-            #009735 0%,   /* purple */
-            #03ff4a 100%  /* sky blue */
+            #00875a 0%,   /* purple */
+            #00de60 100%  /* sky blue */
             );
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -202,7 +200,7 @@
 
     .paragraph  {
         font-size: clamp(0.8rem, 1.4vw, 3.5rem);
-        color: #5f5f5f;
+       color: #484747;
         font-weight: 500;
         width: 85%;
 
@@ -228,12 +226,15 @@
         justify-content: space-between;
         width: 100%;
         margin-top: 0vw;
+        gap: 3vw;
+
+        
 
         
     }
 
     .icon {
-        width: 3vw;
+        width: 3.2vw;
         display: flex;
     }
 
@@ -241,14 +242,17 @@
     .iconCard {
         display: flex;
         flex-direction: column;
-        gap: 20px;
         width: 30%;
+        gap: 20px;
+
+
     }
 
     .iconText {
         display: flex;
         flex-direction: column;
         gap: 0.8vw;
+
     }
 
     .iconHeadingOne,
@@ -257,12 +261,12 @@
         font-weight: 700;
         background: linear-gradient(
             95deg,
-            #009735 0%,   /* purple */
-            #03ff4a 100%  /* sky blue */
+            #00875a 0%,   /* purple */
+            #00de60 100%  /* sky blue */
             );
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            font-size: clamp(0.7rem, 1.2vw, 3.5rem);
+            font-size: clamp(0.7rem, 1.6vw, 3.5rem);
 
     }
 
@@ -272,7 +276,7 @@
     .iconParaOne,
     .iconParaTwo,
     .iconParaThree {
-        color: #5f5f5f;
+        color: #484747;
         font-weight: 550;
         font-size: clamp(0.7rem, 1.2vw, 3.5rem);
 
